--- a/config.json
+++ b/config.json
@@ -4,15 +4,15 @@
         "title": ""
     },
     "boardgamegeek": {
-        "user_name": "YOUR_BGG_USERNAME",
+        "user_name": "PolychromeSquid",
         "extra_params": {
             "own": 1
         }
     },
     "algolia": {
-        "app_id": "YOUR_APP_ID",
-        "api_key_search_only": "YOUR_PUBLIC_API_KEY",
-        "index_name": "YOUR_INDEX_NAME",
-        "hits_per_page": 24
+        "app_id": "SZDU2BNJZE",
+        "api_key_search_only": "8c5a3e9e9312c599cf8e45f9764de544",
+        "index_name": "mybgg",
+        "hits_per_page": 48
     }
 }
